modules/protocol/http/test/binary_uri-ref.txt
debug http: selecting http dissector on flow
debug tcp-connection: opening connection 127.0.0.1:42072 -> 127.0.0.1:80
debug grammar: parse error at byte 5 for field 4 in request_line: token /[[:blank:]]+/ doesn't match
debug grammar: parse error context: \x04\x8e\x99\xff\x00\x11\xed\xde\xad\xbe\xef HTTP/1.1\x0d\x0aHost: 127.0.0.1\x0d\x0a\x0d\x0a...
info alert: id = <>
	severity = low
	description = invalid http request_line
debug tcp-connection: dropping connection 127.0.0.1:42072 -> 127.0.0.1:80
debug tcp-connection: closing connection 127.0.0.1:42072 -> 127.0.0.1:80
